--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <h1>US Presidents</h1>
     <main id="cards"></main>
+    <footer>William Thackeray &bull; DWDD 1720</footer>
     
 
     <script src="js/scripts.js" type="module"></script>
